# Graph-Embeddings

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.py
.ipynb_checkpoints/: run-checkpoint.ipynb
graphs/logs/: logs.py
graphs/main/: model.py  training.py
graphs/utils/: graph_generator.py  util.py
