[tool.poetry]
name = "graphs"
version = "0.1.0"
description = "This is a repository to show one way to do graph embeddings."
authors = ["Satesh Ramdhani <satesh.ramdhani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "2.13.1"
numpy = "1.24.3"
pandas = "2.0.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
